--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	</style>
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top" id="my-navbar">
-    <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
           <span class="icon-bar"></span>
@@ -19,17 +18,14 @@
           <span class="icon-bar"></span>
         </button>
         <a href="" class="navbar-brand">Allergy App</a>
-      </div><!-- Navbar Header-->
+      </div>
       <div class="collapse navbar-collapse" id="navbar-collapse">
-
-      <a href="" class="btn btn-warning navbar-btn navbar-right"></a>
         <ul class="nav navbar-nav">
           <li><a href="#feedback">Portfolio</a>
           <li><a href="#gallery">About</a>
           <li><a href="#features">Contact</a>
         </ul>
       </div>
-    </div>
   </nav>
   <div class="jumbotron">
   		<div class="container text-center">
@@ -152,9 +148,9 @@
                 				</div>
                 	</div>
 
-
-
-
+                  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+                  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+                </body>
 
 
   </html>
