--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
         				</ol>
         				<div class="carousel-inner">
         					<div class="item active">
-        						<img src="jpg" alt="text">
+        						<img src="images/Chimamanda-Ngozi-Adichie.jpg" alt="text">
         						<div class="carousel-caption">
         							<h3>heading</h3>
         							<p>caption</p>
         						</div>
         					</div>
         					<div class="item">
-        						<img src="jpg" alt="text">
+        						<img src="images/iStock_88571873_XLARGE.jpg" alt="text">
         						<div class="carousel-caption">
         							<h3>heading</h3>
         							<p>caption</p>
@@ -98,7 +98,7 @@
         					<p>blah blah blah</p>
         				</div>
         				<div class="col-sm-4">
-        					<img src=".jpg" class="img-responsive" alt="image">
+        					<img src="images/iStock_Magnolia_color copy.jpg" class="img-responsive" alt="image">
         				</div>
         			</div>
         			<div class="row">
