--- a/index.html
+++ b/index.html
@@ -152,5 +152,14 @@
                   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
                 </body>
 
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h3>wire frame</h3>
+                    <p>blah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blah</p>
+                  </div>
+                  <div class="col-sm-4">
+                    <img src="images/page_1.jpg" class="img-responsive" alt="image">
+                  </div>
+                </div>
 
   </html>
