second wireframe text
added another wireframe image and text

--- a/index.html
+++ b/index.html
@@ -161,5 +161,14 @@
                     <img src="images/page_1.jpg" class="img-responsive" alt="image">
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h3>adjustment of wire frame</h3>
+                    <p>blah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blah</p>
+                  </div>
+                  <div class="col-sm-4">
+                    <img src="images/page_2.jpg" class="img-responsive" alt="image">
+                  </div>
+                </div>
 
   </html>
