--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<html lang="en">
 <head>
   <title>Sinclair Kelly</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -172,5 +173,5 @@ body{padding-top: 40px;}
             </div>
 
 
-
-            </html>
+</html>
+</html>
