--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body{padding-top: 40px;}
           <div class="container">
             <section>
               <div class="page-header" id="gallery">
-                <h2>Gallery.<small> photo gallery</small></h2>
+                <h2>Gallery<small> photo gallery</small></h2>
               </div>
 
               <div class="carousel slide" id="screenshot-carousel" data-ride="carousel">
